[tool.poetry]
name = "quests"
version = "0.1.0"
description = ""
authors = ["Nuclearthinking <onifent@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.79.0"
SQLAlchemy = {extras = ["asyncio"], version = "^1.4.39"}
asyncpg = "^0.26.0"
uvicorn = "^0.18.2"
pydantic = "^1.9.1"
passlib = "^1.7.4"


[tool.poetry.dev-dependencies]
sqlalchemy-stubs = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
